--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+click==8.0.3
+colorama==0.4.4
 Flask>=1.0.0
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+greenlet==1.1.2
 gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 numpy==1.21.4
 pandas==1.3.4
+python-dateutil==2.8.2
+python-dotenv==0.19.1
+pytz==2021.3
+six==1.16.0
 sklearn
+SQLAlchemy==1.1.11
+Werkzeug==2.0.2
